crates/biome_html_parser/tests/html_specs/ok/svelte/directives/in_global_modifier.svelte
<div in:fly|global>Global in transition</div>
