crates/biome_html_parser/tests/html_specs/error/svelte/directives/transition_modifier_only.svelte
<div transition:|global>Missing name</div>
